force-app/main/default/objects/EventOutboundEnvironment__mdt/EventOutboundEnvironment__mdt.object-meta.xml
<CustomObject>
    <description>EventOutboundEnvironment</description>
    <label>EventOutboundEnvironment</label>
    <pluralLabel>EventOutboundEnvironments</pluralLabel>
</CustomObject>