force-app/main/default/objects/EventOutboundEnvironment__mdt/fields/OrgEnvironment__c.field-meta.xml
<CustomField>
    <fullName>OrgEnvironment__c</fullName>
    <label>OrgEnvironment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEVELOP</fullName>
                <default>true</default>
                <label>DEVELOP</label>
            </value>
            <value>
                <fullName>SCRATCH</fullName>
            </value>
            <value>
                <fullName>SANDBOX</fullName>
            </value>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>