force-app/main/default/objects/EventOutboundEnvironment__mdt/fields/OrgNames__c.field-meta.xml
<CustomField>
    <fullName>OrgNames__c</fullName>
    <description>Inform correlated Org Name by Comma-separated values</description>
    <label>OrgNames</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>