force-app/main/default/objects/EventOutboundEnvironment__mdt/fields/OutboundEnvironment__c.field-meta.xml
<CustomField>
    <fullName>OutboundEnvironment__c</fullName>
    <label>Outbound Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEVELOPMENT</fullName>
                <default>true</default>
                <label>DEVELOPMENT</label>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>